# sfp-agent-formation

./: .gitignore  CLAUDE.md
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py
backend/app/: config.py  database.py  main.py  models.py
backend/app/middleware/: auth.py
backend/app/routers/: entity_orders.py  health.py  human_kernel.py  llms_txt.py  webhooks.py
backend/app/schemas/: __init__.py  common.py  entity_order.py  webhook.py
backend/app/services/: api_key_service.py  audit_service.py  document_generation_service.py  entity_order_service.py  human_kernel_service.py  name_check_service.py  pii_vault_service.py  state_machine.py  template_engine.py  webhook_service.py
backend/tests/: test_api_routes.py  test_schemas.py  test_state_machine.py
filing-automation/: FILING_AUTOMATION_PLAN.md
filing-automation/recordings/delaware/: de-name-search-and-filing.puppeteer.js  de-name-search-and-filing.recording.json
filing-automation/scripts/delaware/: name_check.py
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  config.ts  index.css  main.tsx
frontend/src/components/: Layout.tsx
frontend/src/lib/: api-types.ts  api.ts
frontend/src/pages/Dashboard/: OrderDetail.tsx  index.tsx
frontend/src/pages/HumanKernel/: KernelComplete.tsx  KernelExpired.tsx  KernelStepAttest.tsx  KernelStepKYC.tsx  KernelStepPII.tsx  KernelStepSign.tsx  index.tsx
frontend/src/pages/IntakeWizard/: index.tsx
mcp-server/: pyproject.toml  server.py
scripts/: create_templates.py
shared/: openapi.json  types.ts
templates/common/: bank_pack_cover.docx
templates/de_llc/: agent_authority_schedule.docx  banking_resolution.docx  certificate_of_formation.docx  form_ss4.docx  operating_agreement.docx
templates/wy_dao_llc/: agent_authority_schedule.docx  articles_of_organization.docx  banking_resolution.docx  form_ss4.docx  operating_agreement_dao.docx  smart_contract_schedule.docx
(+2 files in other folders)
