[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sfp-agent-formation-backend"
version = "1.0.0"
description = "AI Agent Entity Formation API — agent-native legal entity formation service"
requires-python = ">=3.11"
license = {text = "Proprietary"}
authors = [
    {name = "Strategic Fund Partners"},
]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "alembic>=1.14.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "python-docx>=1.1.2",
    "docxtpl>=0.19.0",
    "jinja2>=3.1.5",
    "passlib[bcrypt]>=1.7.4",
    "httpx>=0.28.0",
    "stripe>=11.4.0",
    "boto3>=1.36.0",
    "cryptography>=44.0.0",
    "asyncpg>=0.30.0",
    "python-multipart>=0.0.18",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
